0.5 Bertrand Janin <b@janin.com> (....-..-..)

	* Fix detection of unchanged files.
	* Fix creation of the initial password file.

0.4 Bertrand Janin <b@janin.com> (2013-07-29)

	* Fixed compilation on openSUSE (by pbleser @ github).
	* Fix #4 (removal of EOLs on edit).

0.3 Bertrand Janin <b@janin.com> (2013-07-17)

	* Moved all source code to src/.
	* Fix query-mode.
	* Quadruple and unify the maximum allowable line size.
	* Configurable count of iteration when generating passwords.
	* Fixed wide-char characters on Linux by compiling against ncursesw.
	* Warn the user if a password line is too long and can't be parsed.
	* Fixed a bug when using % in your passwords (go printf).

0.2 Bertrand Janin <b@janin.com> (2013-05-03)

	* Fix Linux compilation (by Wu Jiang <wu@morediff.info>)
	* Fix the file permission (by Wu Jiang <wu@morediff.info>)

0.1 Bertrand Janin <b@janin.com>

	* Initial C rewrite of my 10 years old shell script.
