@@ -1,13 +1,11 @@
 TODO/Bugs
 =========
 
- - Add an option to keep X backups of your password file.
-
  - Add -E to use regex instead of plain text match.
 
- - Configurable number of chars (-g without parameter).
- 
- - Configurable character set used in the randomization.
+ - Create "profiles" for password styles allowing the configuration of:
+   - number of chars (-g without parameter).
+   - character set used in the randomization.
 
  - '-a' will add a password, taking a number of strings in order of argv and
    using a format defined in the config file, this avoids opening the passwords
